--- a/main.html
+++ b/main.html
@@ -1,16 +1,22 @@
 <!DOCTYPE html>
-
-<html>
-
+<html lang="en">
 <head>
-	<link rel="stylesheet" href="styles.css">
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Simple Web Page</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
+    <div class="container">
+        <h1>Welcome to the Web Page</h1>
+        <p id="message">Click the button to see the result</p>
+        <button id="actionBtn">Click Me</button>
+    </div>
 
+    <!-- External JS File -->
+    <script type="text/javascript" src="./script.js"></script>
 </body>
 
 </html>
